# Vulkan-Renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  VulkanEngine.sln  VulkanEngine.vcxproj  VulkanEngine.vcxproj.filters
Res/Shaders/: BasicShader.frag  BasicShader.vert  Compile.bat  basicshaderfrag.spv  basicshadervert.spv
src/: Application.cpp  Application.hpp  Buffer.cpp  Buffer.hpp  Device.cpp  Device.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Main.cpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  StagingBuffer.cpp  StagingBuffer.hpp  Swapchain.cpp  Swapchain.hpp  Texture.cpp  Texture.hpp  Utilities.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Window.cpp  Window.hpp
src/Buffer/: Buffer.cpp  Buffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  StagingBuffer.cpp  StagingBuffer.hpp  UniformBuffer.cpp  UniformBuffer.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/Descriptor/: Descriptor.cpp  Descriptor.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSet.cpp  DescriptorSet.hpp  DescriptorSets.cpp  DescriptorSets.hpp  DescriptorSpec.hpp
